<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.dili</groupId>
	<artifactId>dili-scheduler</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<description>dili-scheduler</description>
	<name>dili-scheduler</name>
	<packaging>jar</packaging>
	<!-- 父工程定义 -->
	<parent>
		<artifactId>dili-parent</artifactId>
		<groupId>com.dili</groupId>
		<version>3.7.0-SNAPSHOT</version>
	</parent>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>13</java.version>
		<templateRootDir>${basedir}/mbg-templates/</templateRootDir>
		<!--  XML生成路径  -->
		<targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
		<targetXMLPackage>mapper</targetXMLPackage>
		<targetMapperPackage>com.dili.scheduler.mapper</targetMapperPackage>
		<targetModelPackage>com.dili.scheduler.domain</targetModelPackage>
		<targetServicePackage>com.dili.scheduler.service</targetServicePackage>
		<targetControllerPackage>com.dili.scheduler.controller</targetControllerPackage>
	</properties>


	<build>
		<finalName>dili-scheduler</finalName>
		<!-- 资源文件过滤 -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>2.3.2.RELEASE</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-resources-plugin</artifactId>-->
<!--				<version>3.1.0</version>-->
<!--				<configuration>-->
<!--					<nonFilteredFileExtensions>-->
<!--						<nonFilteredFileExtension>xls</nonFilteredFileExtension>-->
<!--						<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>-->
<!--					</nonFilteredFileExtensions>-->
<!--				</configuration>-->
<!--			</plugin>-->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<!-- 编译JDK版本 -->
				<configuration>
					<source>13</source>
					<target>13</target>
					<encoding>UTF-8</encoding>
					<parameters>true</parameters>
<!--					<compilerArgument>-proc:none</compilerArgument>-->
					<compilerArgs>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mybatis.generator</groupId>
				<artifactId>mybatis-generator-maven-plugin</artifactId>
				<version>1.3.7</version>
				<configuration>
					<configurationFile>${basedir}/src/main/resources/generator/generatorConfig.xml</configurationFile>
					<overwrite>true</overwrite>
					<verbose>true</verbose>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.dili</groupId>
						<artifactId>ss-mbg</artifactId>
						<version>${sharp-sword.version}</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.1</version>
		</dependency>

		<!-- if you enable json support in spring mvc. -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>

		<!-- 利刃框架引入 -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-scheduler</artifactId>
			<version>${sharp-sword.version}</version>
		</dependency>

		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>uap-sdk</artifactId>
			<version>2.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-processor</artifactId>
			<version>${sharp-sword.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.sun</groupId>
					<artifactId>tools</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- 公共信息 -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>commons-web</artifactId>
			<version>1.3.4-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>com.alibaba.cloud</groupId>
			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
			<version>2.2.0.RELEASE</version>
		</dependency>
	</dependencies>

</project>